Flusspferd Change Log
=====================

Release 0.9
-----------

2009-10-24:
- Remove support for old Spidermonkey versions.
- Constructor of root_* now explicit (#124).

Release 0.8
-----------

2009-10-20:
- Alias 'fs-base' to 'filesystem-base' module

2009-10-17:
- '--interactive' flag to the REPL will now enter interactive mode even after
  call to quit() or an exception is thrown

2009-10-10:
- A largely complete implementation of CommonJS 'filesystem-base' module
  (http://wiki.commonjs.org/wiki/Filesystem/A/0). This is only a proposal, so
  might change.
- Treat JS files as UTF-8

2009-10-04:
- native_function_base object now has a trace() method

2009-09-27:
- repl now prints v.to_source to give better output for objects.

2009-09-26:
- Change how (pure JS) modules are loaded to preserve JIT and isolate scopes
  better
- Enable spidermonkey's strict mode warnings for all modules

2009-09-19:
- Overhauled SQLite3 module (issue #103).

2009-09-20:
- json2.js (http://www.json.org/json2.js) is now loaded to provide an ES5
  compatible JSON object for older spidermonkey

2009-09-19:
- Immature plugins have been removed (and moved into feature branch).

2009-09-10:
- Added bash_completion script for flusspferd.

Release 0.7
-----------

2009-08-31:
- Use new getopt API for parsing interpreter / shell arguments.
- Add platform and xFlusspferdVersion constants to system module.

2009-07-30:
- Add (core) "getopt" plugin and C++ API.

2009-07-19:
- Remove environment plugin. Env variables are now only available via
  require('system').env (CommonJS compatability).

2009-07-04:
- Emacs mode is installed (again) and byte compiled if emacs is found.
- Line editors (libedit / readline / none) can now be selected via the cmake
  LINE_EDITOR option (also, similar to FORCE_PLUGINS, there is now
  FORCE_LINE_EDITOR).

2009-06-22:
- IO.stdin/stdout/stderr removed in favor of the same in the 'system' module.

2009-06-20: